# primitives

./: Cargo.toml  README.md
examples/: euler_ctrnn_lorenz.rs  vertlet_ctrnn_lorenz.rs
src/: f.rs  lib.rs
src/envs/: lorenz.rs  mod.rs  narma.rs  pendulum.rs
src/nn/: attention.rs  ctrnn.rs  ffn.rs  layernorm.rs  mod.rs  vertlet_ctrnn.rs
src/nn/experimental/: ltc_ctrnn.rs  mod.rs
src/optim/: adam.rs  mod.rs  optimizer.rs  param.rs
src/rl/: discrete_ppo.rs  mod.rs  ppo.rs  sac.rs  td3.rs
src/util/: bench.rs  graph.rs  mod.rs
