[package]
name = "prims"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/naatebarber/primitives"
homepage = "https://github.com/naatebarber/primitives"
license = "MIT OR Apache-2.0"
description = "Hand derived machine learning primitives"
readme = "README.md"


[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"
rand = "0.9.2"
serde = { version = "1.0.197", features = ["derive", "rc"] }
plotly = "0.12.1"
